--- a/spec/javascripts/fixtures/application.html
+++ b/spec/javascripts/fixtures/application.html
@@ -5,12 +5,14 @@
   <title>Application | JavaScript Testing Results</title>
   <link rel="stylesheet" href="screw.css" type="text/css" charset="utf-8" /> 
   <script type="text/javascript" src="../../../vendor/plugins/blue-ridge/lib/blue-ridge.js"></script>
+  <script src='../../../public/javascripts/jquery.js' type='text/javascript'></script>
+  <script src='../../../public/javascripts/rails.js' type='text/javascript'></script>
+  <script src='../../../public/javascripts/application.js' type='text/javascript'></script>
 </head>
 
 <body>
   <!-- Put any HTML fixture elements here. -->
-  <div class="select_me"/>
-  <span class="select_me"/>
-  <div class="dont_select_me"/>
-</body>
+  <div id="something"></div>
+  </body>
 </html>
+
